APS-4571 Add 409 Conflict, 429 Too Many Requests, and 500
